tests/post_inference_implicit_instantiation_pin_types/post_inference_implicit_instantiation_pin_types.exp
Error ------------------------------------------------------------------------ underconstrained_class_constructor.js:5:1

`T` is underconstrained by new `A` [1] and is defined in `T` [2] [underconstrained-implicit-instantiation]

   underconstrained_class_constructor.js:5:1
   5| new A();
      ^^^^^^^ [1]

References:
   underconstrained_class_constructor.js:2:17
   2| declare class A<T>{
                      ^ [2]


Error ----------------------------------------------------------------------- underconstrained_class_constructor.js:10:1

`T` is underconstrained by new `B` [1] and is defined in `T` [2] [underconstrained-implicit-instantiation]

   underconstrained_class_constructor.js:10:1
   10| new B((x: number) => 'string');
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]

References:
   underconstrained_class_constructor.js:7:18
    7| declare class B<+T>{
                        ^ [2]


Error ----------------------------------------------------------------------- underconstrained_class_constructor.js:16:1

`T` is underconstrained by new `C` [1] and is defined in `T` [2] [underconstrained-implicit-instantiation]

   underconstrained_class_constructor.js:16:1
   16| new C(3);
       ^^^^^^^^ [1]

References:
   underconstrained_class_constructor.js:12:18
   12| declare class C<-T>{
                        ^ [2]


Error --------------------------------------------------------------------------------- underconstrained_fun_call.js:3:1

`T` is underconstrained by call of `f` [1] and is defined in `T` [2] [underconstrained-implicit-instantiation]

   underconstrained_fun_call.js:3:1
   3| f();
      ^^^ [1]

References:
   underconstrained_fun_call.js:2:20
   2| declare function f<T>(): T;
                         ^ [2]


Error --------------------------------------------------------------------------------- underconstrained_fun_call.js:6:1

`T` is underconstrained by call of `g` [1] and is defined in `T` [2] [underconstrained-implicit-instantiation]

   underconstrained_fun_call.js:6:1
   6| g((x: number) => 'string');
      ^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]

References:
   underconstrained_fun_call.js:5:20
   5| declare function g<T>(T => mixed): T;
                         ^ [2]


Error --------------------------------------------------------------------------------- underconstrained_fun_call.js:9:1

`T` is underconstrained by call of `h` [1] and is defined in `T` [2] [underconstrained-implicit-instantiation]

   underconstrained_fun_call.js:9:1
   9| h(3);
      ^^^^ [1]

References:
   underconstrained_fun_call.js:8:20
   8| declare function h<T>(T): T => mixed;
                         ^ [2]


Error -------------------------------------------------------------------------------- underconstrained_fun_call.js:12:1

`T` is underconstrained by call of `i` [1] and is defined in `T` [2] [underconstrained-implicit-instantiation]

   underconstrained_fun_call.js:12:1
   12| i();
       ^^^ [1]

References:
   underconstrained_fun_call.js:11:20
   11| declare function i<T>(): Array<T>;
                          ^ [2]


Error -------------------------------------------------------------------------- underconstrained_fun_constructor.js:3:1

`T` is underconstrained by new `f` [1] and is defined in `T` [2] [underconstrained-implicit-instantiation]

   underconstrained_fun_constructor.js:3:1
   3| new f();
      ^^^^^^^ [1]

References:
   underconstrained_fun_constructor.js:2:20
   2| declare function f<T>(): T;
                         ^ [2]


Error -------------------------------------------------------------------------- underconstrained_fun_constructor.js:6:1

`T` is underconstrained by new `g` [1] and is defined in `T` [2] [underconstrained-implicit-instantiation]

   underconstrained_fun_constructor.js:6:1
   6| new g((x: number) => 'string');
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]

References:
   underconstrained_fun_constructor.js:5:20
   5| declare function g<T>(T => mixed): T;
                         ^ [2]


Error -------------------------------------------------------------------------- underconstrained_fun_constructor.js:9:1

`T` is underconstrained by new `h` [1] and is defined in `T` [2] [underconstrained-implicit-instantiation]

   underconstrained_fun_constructor.js:9:1
   9| new h(3);
      ^^^^^^^^ [1]

References:
   underconstrained_fun_constructor.js:8:20
   8| declare function h<T>(T): T => mixed;
                         ^ [2]


Error ------------------------------------------------------------------------- underconstrained_fun_constructor.js:12:1

`T` is underconstrained by new `i` [1] and is defined in `T` [2] [underconstrained-implicit-instantiation]

   underconstrained_fun_constructor.js:12:1
   12| new i();
       ^^^^^^^ [1]

References:
   underconstrained_fun_constructor.js:11:20
   11| declare function i<T>(): Array<T>;
                          ^ [2]



Found 11 errors
